# site_project

./: docker-compose.yml
auth/: Dockerfile  README.md  conftest.py  pyproject.toml
auth/src/apps/users/: apps.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
auth/src/apps/users/tests/: test_auth.py  test_signin.py  test_signup.py  test_user_flow.py
auth/src/core/: settings.py  urls.py
events/: Dockerfile  conftest.py  entrypoint.sh  pyproject.toml
events/src/apps/events/: apps.py  filters.py  models.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
events/src/apps/events/migrations/: 0001_initial.py
events/src/apps/events/services/rabbitmq/: adapter.py  client.py
events/src/apps/events/tests/: test_events.py
events/src/core/: settings.py  urls.py
nginx/: nginx.conf
