[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Sem <semseveryanin@gmail.com>"]
description = "Auth service"
name = "auth-sevice"
readme = "auth/README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.7"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.5.0"
python-dotenv = "^1.0.1"
pymongo = "^4.11.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"
isort = "^6.0.1"
black = "^25.1.0"
pytest = "^8.3.5"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
addopts = "--reuse-db"
env = [

]
filterwarnings = [

]
markers = [

]
python_files = "test*.py"

[tool.tomlsort]
all = true
in_place = true
sort_first = ["tool.poetry"]
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
