[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Sem <semseveryanin@gmail.com>"]
description = "Auth service"
name = "auth-sevice"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.7"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
bcrypt = "^4.3.0"
pytz = "^2025.1"
mongoengine = "^0.29.1"
pyjwt = "^2.10.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"
isort = "^6.0.1"
black = "^25.1.0"
pytest = "^8.3.5"
pytest-django = "^4.10.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
addopts = "--reuse-db"
filterwarnings = [

]
markers = [
    "unit: тесты на единичные компоненты"
]
python_files = ["test_*.py", "*_test.py", "*tests.py"]
testpaths = ["src"]

[tool.tomlsort]
all = true
in_place = true
sort_first = ["tool.poetry"]
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
